@@ -10,6 +10,7 @@ lib/fog/Config.class.php
 * Add ability to adjust timeout values on login system or remove them
 completely.
 * Fix Storage Node/Image Replicator so it only replicates to enabled nodes.
+* OU system is now a select box.  Documentation will follow, but in beta atm.
 
 Version 1.1.1
 -------------
